WIP: basic auth for API
